Ajuste de CNAME

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <div>
                 <div class="text-center mb-5">
                     <h2 class="fw-bolder">Ubicación</h2>
-                    <p class="lead mb-3">Lorem ipsum dolor sit amet.</p>
+                    <p class="lead mb-3">Estamos ubicados en el corazón de Lima, Miraflores. Haz tu reserva hoy y potencia tu presencia profesional.</p>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1370.9070862625808!2d-77.0256940828683!3d-12.122050990871315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c81b10647d91%3A0xd47930c1a33df3dc!2sCa.%20Mariano%20Odicio%20328%2C%20Miraflores%2015047!5e0!3m2!1ses-419!2spe!4v1748806224912!5m2!1ses-419!2spe" width="600" height="450" style="border:0; width:90%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
