--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="Estudio especializado en fotografía de retratos corporativos, LinkedIn en Lima Perú. ¡Conoce nuestros paquetes y reserva hoy" />
         <meta name="author" content="" />
-        <title>Nombre Marca</title>
+        <title>Studio 212 | Fotos para LinkedIn, corporativas en Lima, Perú</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
