--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Estudio especializado en fotografía de retratos corporativos, LinkedIn en Lima Perú. ¡Conoce nuestros paquetes y reserva hoy" />
         <meta name="author" content="" />
-        <title>Studio 212 | Fotos para LinkedIn, corporativas en Lima, Perú</title>
+        <title>222 Studios|Fotos para LinkedIn, corporativas en Lima, Perú</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -421,8 +421,8 @@
         <section class="bg-light py-5">
             <div class="container px-5 my-5 px-5">
                 <div class="text-center mb-5">
-                    <h2 class="fw-bolder">Studio 212</h2>
-                    <p class="lead mb-0">by Richard Ávila</p>
+                    <h2 class="fw-bolder">222 Studios</h2>
+                    <p class="lead mb-0">by Richard Avila</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="feature bg-primary-212 bg-gradient text-white rounded-3 mb-3 mx-3"><a class="text-white" href="https://www.instagram.com/paltarich/" target="_blank"><i class="bi bi-instagram"></i></a></div>
@@ -436,7 +436,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Studio 212</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy;222 Studios</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
