Ajuste de meta tittle

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div class="container px-5 my-5 px-5">
                 <div class="text-center mb-5">
                     <h2 class="fw-bolder">222 Studios</h2>
-                    <p class="lead mb-0">by Richard Avila</p>
+                    <p class="lead mb-0">by <a class="enlace-richard" href="https://richardavila.pe">Richard Avila</a></p>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="feature bg-primary-212 bg-gradient text-white rounded-3 mb-3 mx-3"><a class="text-white" href="https://www.instagram.com/paltarich/" target="_blank"><i class="bi bi-instagram"></i></a></div>
