--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>222 Studios | Fotos para LinkedIn, corporativas en Lima, Perú</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="./img/Assets/222studios.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
