agregado de etiqueta google annlytics

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         <link href="css/swiper.css" rel="stylesheet" />
         <link href="css/qa.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
+            <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-6DY996ZYH6"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-6DY996ZYH6');
+            </script>
     </head>
     <body>
         <div id="page-top"></div>
