agregado de ids a botones CTA

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                         Monthly status reports
                                     </li> -->
                                 </ul>
-                                <div class="d-grid"><a class="btn btn-primary-pricing-off btn-cotizar" href="https://api.whatsapp.com/send?phone=51983335100&text=Hola%20me%20gustaria%20agendar%20una%20reserva%20retrato%20express%20%F0%9F%99%82">Reservar Ahora</a></div>
+                                <div id="cotizar-retrato-express" class="d-grid"><a class="btn btn-primary-pricing-off btn-cotizar" href="https://api.whatsapp.com/send?phone=51983335100&text=Hola%20me%20gustaria%20agendar%20una%20reserva%20retrato%20express%20%F0%9F%99%82">Reservar Ahora</a></div>
                             </div>
                         </div>
                     </div>    
@@ -276,7 +276,7 @@
                                         Monthly status reports
                                     </li> -->
                                 </ul>
-                                <div class="d-grid"><a class="btn btn-primary-pricing-off btn-cotizar" href="https://api.whatsapp.com/send?phone=51983335100&text=Hola%20me%20gustaria%20agendar%20una%20reserva%20retrato%20plus%20%F0%9F%99%82">Reservar Ahora</a></div>
+                                <div id="cotizar-retrato-plus" class="d-grid"><a class="btn btn-primary-pricing-off btn-cotizar" href="https://api.whatsapp.com/send?phone=51983335100&text=Hola%20me%20gustaria%20agendar%20una%20reserva%20retrato%20plus%20%F0%9F%99%82">Reservar Ahora</a></div>
                             </div>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                                         Monthly status reports
                                     </li> -->
                                 </ul>
-                                <div class="d-grid"><a class="btn btn-primary-pricing btn-cotizar" href="https://api.whatsapp.com/send?phone=51983335100&text=Hola%20me%20gustaria%20agendar%20una%20reserva%20retrato%20marca%20personal%20%F0%9F%99%82">Reservar Ahora</a></div>
+                                <div id="cotizar-marca-personal" class="d-grid"><a class="btn btn-primary-pricing btn-cotizar" href="https://api.whatsapp.com/send?phone=51983335100&text=Hola%20me%20gustaria%20agendar%20una%20reserva%20retrato%20marca%20personal%20%F0%9F%99%82">Reservar Ahora</a></div>
                             </div>
                         </div>
                     </div>                
