cambio de fondo por video

--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
             </div>
         </nav>
         <!-- Header-->
-        <header class="bg-dark py-5" style="background-image: url(https://thumbs.dreamstime.com/b/large-photography-studio-background-lighting-blank-photo-professional-various-equipment-268102627.jpg);background-size: cover;background-position:center;">
+        <header class="bg-dark py-5"style="
+    overflow: hidden;
+    z-index: 1;
+    position: relative;
+" ><video class="img-fluid" autoplay="" playsinline="" muted="" loop="" style="width: max-content;object-fit: fill;scale:1.1;position: absolute;z-index: -1;overflow: hidden;">
+                            <source src="https://www.richardavila.pe/assets/img/portfolio/Video/Retratos.mp4" type="video/mp4">
+                            
+                            </video>
             <div class="container p-5">
                 <div class="row gx-5 justify-content-center rounded-5" style="
                 background-color: rgb(34 37 41/ 0.8);
