--- a/index.html
+++ b/index.html
@@ -55,15 +55,16 @@
             </div>
         </nav>
         <!-- Header-->
-        <header class="bg-dark py-5"style="
+        <header class="bg-dark"style="
     overflow: hidden;
     z-index: 1;
     position: relative;
+    padding-top:3rem;
 " ><video class="img-fluid" autoplay="" playsinline="" muted="" loop="" style="width: max-content;object-fit: fill;scale:1.1;position: absolute;z-index: -1;overflow: hidden;">
                             <source src="https://www.richardavila.pe/assets/img/portfolio/Video/Retratos.mp4" type="video/mp4">
                             
                             </video>
-            <div class="container p-5">
+            <div class="container encabezado">
                 <div class="row gx-5 justify-content-center rounded-5" style="
                 background-color: rgb(34 37 41/ 0.8);
             ">
