ajustes de banner principal

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
                             
                             </video>
             <div class="container encabezado">
-                <div class="row gx-5 justify-content-center rounded-5" style="
-                background-color: rgb(34 37 41/ 0.8);
-            ">
+                <div class="row gx-5 justify-content-center rounded-5">
                     <div class="col-lg-6">
                         <div class="text-center my-5">
                             <h1 class="display-5 fw-bolder text-white mb-2">Retratos corporativos para destacar en LinkedIn</h1>
